# Jarvis

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitpod.yml  .jarvis  .jarvis_agents.json  .markdownlinkcheck.json  .pylintrc  =45  Dockerfile  Jarvis_Agent_技术总结.md  Jarvis_Report.md  Jarvis_vs_ZeroClaw对比报告.md  Jarvis深度分析报告.md  LICENSE  MANIFEST.in  README.md  README_zh.md  RELEASE_NOTE.md  REVERSE_DESIGN.md  ReleaseNote  ReleaseNote.md  TODO.md  agent.py  agents.py  auto_commit.py  config.py  diff  docker-compose.yml  env.yaml  execution_tools.py  file_tools.py  generate_commit.py  latest.patch  logger.py  main.py  mkdocs.yml  models.py  mypy.ini  (+33 more)
.github/workflows/: deploy-docs.yml  docker-publish.yml  publish-vscode.yml  publish.yml  test.yml
.jarvis/: c2rust  config.yaml  goals  pre-command  rule  rule.md  tmp
.jarvis-codebase/: codebase.db  vectors.index
.jarvis-coder/: index.db
.jarvis/evolution/: current_phase.md  evolution_history.json  evolution_plan.md  phase5_digital_twin_design.md
.jarvis/jsec/: config.json
.jarvis/memory/: 20250802_121422_812796.json  20250804_095511_974929.json  20250804_110916_800764.json  20250804_111252_124983.json  20250804_193631_703180.json  20250804_212034_592380.json  20250804_212034_612420.json  20250804_212552_911608.json  20250804_231109_191146.json  20250804_231109_228486.json  20250805_104832_325832.json  20250805_114603_737852.json  20250805_124254_486968.json  20250805_144059_701555.json  20250805_152241_920508.json  20250805_153745_741352.json  20250805_155537_639135.json  20250805_155537_683371.json  20250805_160210_928230.json  20250805_161526_259020.json  20250806_151119_512522.json  20250806_151119_563351.json  20250806_154819_287296.json  20250806_154912_384928.json  20250806_162110_912748.json  20250806_173127_062091.json  20250806_173755_590198.json  20250806_174150_861272.json  20250806_175526_884310.json  20250806_175526_902602.json  20250807_091044_599368.json  20250807_092353_685007.json  20250807_101709_539854.json  20250807_102950_996946.json  20250807_103931_006943.json  20250807_103931_032053.json  20250807_105008_453205.json  20250807_105221_945469.json  20250807_105326_522763.json  20250807_105326_543923.json  (+1437 more)
.jarvis/spec/: base_compression_integration_spec.md  code_agent_session_management.md  compression_removal_spec.md  gateway_agent_manager.md  gateway_output_cache_strategy_spec.md  gateway_spec.md  global_search_spec.md  jarvis_lsp_spec.md  jarvis_vscode_extension.md  memory_pin_optimization.md  node_mode_design_plan.md  node_mode_detailed_design.md  node_mode_spec.md  output_color_config.md  playwright_browser_tool_spec.md  text_document_hover_spec.md  ui_color_theme_adaptation_spec.md  web_gateway_app_spec.md  web_gateway_guide.md  web_gateway_tty_interaction_spec.md  websocket_gateway_spec.md  windows_app_tool_spec.md
agent/: __init__.py  analysis.py  base.py  execution.py  llama_agent.py  reflection.py  validation.py
builtin/agent/: architecture-diagram-generator.yaml  child-psychology-expert.yaml  code-reverse-design-expert.yaml  life-consultant.yaml  life-simulator.yaml  mckinsey-consultant.yaml  opensource-deployment-expert.yaml  ppt-design-expert.yaml  product-promotion-writer.yaml  psychology-expert.yaml  pua-expert.yaml  refactor_checker.yaml  script-generator.yaml  security_vulnerability_analyst.yaml  slide-generator.yaml  subliminal-message-expert.yaml
builtin/multi_agent/: c2rust_migration.yaml  investment_pitch.yaml  novel_generator.yaml  openharmony_security_evolution.yaml  problem_solver.yaml  researcher.yaml  security_evolution.yaml  thinker.yaml
builtin/roles/: coaching_roles.yaml  hr_roles.yaml  planning_roles.yaml  roles.yaml  thinking_roles.yaml  writing_roles.yaml
builtin/rules/: add_rule.md  builtin_rules.md  c2rust_transpiler.md  code-reverse-design-expert.md  documentation.md  ignore_all_alerts.md  ios-dark-theme.md  ios-front-style.md  jarvis_browser_cli.md  opensource-deployment-expert.md  performance.md  refactor-checker.md  rule.md  rust_performance.md  script-generator.md  sdd.md
builtin/test_rules/: rust_test.md
data/tools/: git_work_summary.py  train_schedule_query.py
docker/: Dockerfile
docs/: CodeAgent_vs_Cursor_缺失功能分析.md  GITHUB_PAGES_DEPLOYMENT.md  Jarvis_Product_Report.md  Jarvis_vs_ZeroClaw对比报告.md  Jarvis_vs_ZeroClaw对比报告_v2.md  WEB_STARTUP.md  ZeroClaw分析.md  jarvis-agent.md  jarvis-code-agent.md  jarvis-code-review.md  jarvis-codebase.md  jarvis-dev.md  jarvis-git-commit.md  jarvis-git-squash.md  jarvis-multi-agent.md  jarvis-platform-manager.md  jarvis-rag.md  jarvis-smart-shell.md  jarvis.md  jarvis_config.md  jarvis_vs_codex_cli.md  offline_installation.md  technical_documentation.md  实施计划-AI代码编辑质量提升.md  目标保持机制分析.md
docs/best_practices/: Claude_Code_Cursor_提示词对比分析.md  Jarvis规则系统介绍.md  jarvis_agent_cli_invocation.md  jcad最佳实践.md  rules_best_practices.md  使用jcad进行多feature并行开发.md  使用jca进行交互式代码开发.md  利用规则增加新的规则.md  利用规则快速引入MCP、SKILLS.md  在项目中引入CodeAgent和Agent.md  规则使用最佳实践.md
docs/compare/: jarvis_code_agent_evolution_plan.md  jarvis_vs_claude_code_agent.md  jarvis_vs_codex_cli.md
docs/images/: jarvis_deployment_view.dot  jarvis_implementation_view.dot  jarvis_logical_view.dot  jarvis_process_view.dot  (+1 more)
fakeopenai/: main.py
frontend/: index.html  package.json  vite.config.js
llm/: __init__.py  base.py  discovery.py  ollama.py  ollama_llm.py  openai.py  openai_llm.py  zte_llm.py
scripts/: build-docker.sh  build_pdf.sh  build_vscode_extension_release.sh  create_offline_package.sh  install.ps1  install.sh  install_playwright.py  make_book.sh  publish.py  run_tests.sh  style.css  test_offline_package.sh
test_cases/: bzip2_report.md
tests/: conftest.py
tools/: __init__.py  base.py  discovery.py  math_tool.py  python_tool.py  registry.py  search_tool.py  shell_tool.py
utils/: __init__.py  extract_json_from_response.py  json_utils.py  logger.py  yaml_utils.py
智锻代码·开源鸿蒙全球AI Agent代码生成挑战赛-资料归档/: 智锻代码·开源鸿蒙全球AI Agent代码生成挑战赛-使用说明.md  智锻代码·开源鸿蒙全球AI Agent代码生成挑战赛-完整技术报告-复赛.md  智锻代码·开源鸿蒙全球AI Agent代码生成挑战赛-技术报告.md
(+1837 files in other folders)
