[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai-assistant"
version = "0.1.90"
description = "Jarvis: An AI assistant that uses tools to interact with the system"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
keywords = ["jarvis", "ai", "assistant", "tools", "automation"]
dependencies = [
    "requests>=2.25.1",
    "pyyaml>=5.1",
    "colorama>=0.4.6",
    "prompt_toolkit>=3.0.0",
    "openai>=1.20.0",
    "playwright>=1.41.1",
    "numpy>=1.24.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.2.2",
    "bs4>=0.0.1",
    "PyMuPDF>=1.21.0",
    "python-docx>=0.8.11",
    "tiktoken>=0.3.0",
    "tqdm>=4.65.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy"]

[project.urls]
Homepage = "https://github.com/skyfireitdiy/Jarvis"

[project.scripts]
jarvis = "jarvis.main:main"
jarvis-codebase = "jarvis.jarvis_codebase.main:main"
jarvis-rag = "jarvis.jarvis_rag.main:main"
jarvis-smart-shell = "jarvis.jarvis_smart_shell.main:main"
jss = "jarvis.jarvis_smart_shell.main:main"
jarvis-platform = "jarvis.jarvis_platform.main:main"