[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai-assistant"
version = "1.1.4"
description = "Jarvis: An AI assistant that uses tools to interact with the system"
readme = "README.md"
authors = [{ name = "skyfire", email = "skyfireitdiy@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = ["jarvis", "ai", "assistant", "tools", "automation"]
dependencies = [
    "requests==2.32.3",
    "colorama==0.4.6",
    "prompt_toolkit==3.0.50",
    "pygments==2.19.1",
    "fuzzywuzzy==0.18.0",
    "fastapi==0.115.12",
    "uvicorn==0.33.0",
    "rich==14.0.0",
    "python-Levenshtein==0.25.1",
    "tiktoken==0.7.0",
    "pillow==10.2.0",
    "openai==1.78.1",
    "anthropic>=0.40.0",
    "tabulate==0.9.0",
    "pyte==0.8.2",
    "pyyaml>=5.3.1",
    "jsonnet>=0.20.0",
    "ddgr",
    "jinja2>=3.0.0",
    "lxml==6.0.0",
    "markdownify>=1.1.0",
    "typer",
    "pathspec",
    "plotext==5.2.8",
    "packaging>=24.2",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-rust==0.24.0",
    "tree-sitter-go==0.25.0",
    "tree-sitter-java==0.23.5",
    "tree-sitter-cpp==0.23.4",
    "tree-sitter-c==0.24.1",
    "tree-sitter-json==0.24.8",
    "tree-sitter-yaml==0.7.2",
    "tree-sitter-markdown==0.5.1",
    "tree-sitter-html==0.23.2",
    "tree-sitter-css==0.25.0",
    "tree-sitter-bash==0.25.1",
    "tree-sitter-ruby==0.23.1",
    "tree-sitter-php==0.24.1",
    "tree-sitter-sql==0.3.11",
    ]
    requires-python = "==3.12.*"

    [project.optional-dependencies]
    dev = ["pytest", "ruff", "mypy", "build", "twine"]
    rag = [
        "langchain",
        "langchain-community",
        "langchain-huggingface",
        "chromadb",
        "diskcache",
        "sentence-transformers==2.7.0",
        "torch>=2.6",
        "unstructured[md]",
        "rank-bm25",
    ]
    clang16 = ["clang==16.*"]
    clang17 = ["clang==17.*"]
    clang18 = ["clang==18.*"]
    clang19 = ["clang==19.*"]
    clang20 = ["clang==20.*"]
    clang21 = ["clang==21.*"]
    tree-sitter-python = ["tree-sitter", "tree-sitter-python"]
    tree-sitter-javascript = ["tree-sitter", "tree-sitter-javascript"]
    tree-sitter-typescript = ["tree-sitter", "tree-sitter-typescript"]
    tree-sitter-rust = ["tree-sitter", "tree-sitter-rust"]
    tree-sitter-go = ["tree-sitter", "tree-sitter-go"]
    tree-sitter-java = ["tree-sitter", "tree-sitter-java"]
    tree-sitter-cpp = ["tree-sitter", "tree-sitter-cpp"]
    tree-sitter-c = ["tree-sitter", "tree-sitter-c"]
    tree-sitter-json = ["tree-sitter", "tree-sitter-json"]
    tree-sitter-yaml = ["tree-sitter", "tree-sitter-yaml"]
    tree-sitter-markdown = ["tree-sitter", "tree-sitter-markdown"]
    tree-sitter-html = ["tree-sitter", "tree-sitter-html"]
    tree-sitter-css = ["tree-sitter", "tree-sitter-css"]
    tree-sitter-bash = ["tree-sitter", "tree-sitter-bash"]
    tree-sitter-ruby = ["tree-sitter", "tree-sitter-ruby"]
    tree-sitter-php = ["tree-sitter", "tree-sitter-php"]
    tree-sitter-sql = ["tree-sitter", "tree-sitter-sql"]
    tree-sitter-all = [
        "tree-sitter==0.25.2",
        "tree-sitter-python==0.25.0",
        "tree-sitter-javascript==0.25.0",
        "tree-sitter-typescript==0.23.2",
        "tree-sitter-rust==0.24.0",
        "tree-sitter-go==0.25.0",
        "tree-sitter-java==0.23.5",
        "tree-sitter-cpp==0.23.4",
        "tree-sitter-c==0.24.1",
        "tree-sitter-json==0.24.8",
        "tree-sitter-yaml==0.7.2",
        "tree-sitter-markdown==0.5.1",
        "tree-sitter-html==0.23.2",
        "tree-sitter-css==0.25.0",
        "tree-sitter-bash==0.25.1",
        "tree-sitter-ruby==0.23.1",
        "tree-sitter-php==0.24.1",
        "tree-sitter-sql==0.3.11",
    ]

    [project.urls]
    Homepage = "https://github.com/skyfireitdiy/Jarvis.git"

    [tool.mypy]
    ignore_missing_imports = true

    [project.scripts]
    jarvis = "jarvis.jarvis_agent.jarvis:main"
    jarvis-agent-dispatcher = "jarvis.jarvis_agent.jvsd_cli:app"
    jvs = "jarvis.jarvis_agent.jarvis:main"
    jvsd = "jarvis.jarvis_agent.jvsd_cli:app"
    jarvis-code-agent = "jarvis.jarvis_code_agent.code_agent:main"
    jca = "jarvis.jarvis_code_agent.code_agent:main"
    jarvis-code-agent-dispatcher = "jarvis.jarvis_code_agent.jcad_cli:app"
    jcad = "jarvis.jarvis_code_agent.jcad_cli:app"
    jarvis-smart-shell = "jarvis.jarvis_smart_shell.main:main"
    jss = "jarvis.jarvis_smart_shell.main:main"
    jarvis-platform-manager = "jarvis.jarvis_platform_manager.main:main"
    jpm = "jarvis.jarvis_platform_manager.main:main"
    jarvis-git-commit = "jarvis.jarvis_git_utils.git_commiter:main"
    jarvis-code-review = "jarvis.jarvis_code_analysis.code_review:main"
    jarvis-memory-organizer = "jarvis.jarvis_memory_organizer.memory_organizer:main"
    jmo = "jarvis.jarvis_memory_organizer.memory_organizer:main"
    jcr = "jarvis.jarvis_code_analysis.code_review:main"
    jgc = "jarvis.jarvis_git_utils.git_commiter:main"
    jarvis-git-squash = "jarvis.jarvis_git_squash.main:main"
    jgs = "jarvis.jarvis_git_squash.main:main"
    jarvis-multi-agent = "jarvis.jarvis_multi_agent.main:main"
    jma = "jarvis.jarvis_multi_agent.main:main"
    jarvis-agent = "jarvis.jarvis_agent.main:main"
    ja = "jarvis.jarvis_agent.main:main"
    jarvis-tool = "jarvis.jarvis_tools.cli.main:main"
    jt = "jarvis.jarvis_tools.cli.main:main"
    jarvis-methodology = "jarvis.jarvis_methodology.main:main"
    jm = "jarvis.jarvis_methodology.main:main"
    jarvis-rag = "jarvis.jarvis_rag.cli:main"
    jrg = "jarvis.jarvis_rag.cli:main"
    jarvis-stats = "jarvis.jarvis_stats.cli:main"
    jst = "jarvis.jarvis_stats.cli:main"
    jarvis-sec = "jarvis.jarvis_sec.cli:main"
    jsec = "jarvis.jarvis_sec.cli:main"
    jarvis-c2rust = "jarvis.jarvis_c2rust.cli:main"
    jc2r = "jarvis.jarvis_c2rust.cli:main"
    jarvis-config = "jarvis.jarvis_config.cli:app"
    jcfg = "jarvis.jarvis_config.cli:app"
    jarvis-quick-config = "jarvis.jarvis_utils.quick_config:app"
    jqc = "jarvis.jarvis_utils.quick_config:app"
    jarvis-check = "jarvis.jarvis_jck.cli:main"
    jck = "jarvis.jarvis_jck.cli:main"






